--- a/css/landscape.css
+++ b/css/landscape.css
@@ -4,6 +4,14 @@
     margin-left: 0px;
   }
 
+  nav a{
+    padding: 19px 0px;
+  }
+
+  nav a:hover {
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+  }
 
   h2 {
     font-size: 1.3em;
