--- a/css/tablette.css
+++ b/css/tablette.css
@@ -14,6 +14,15 @@
     padding-left: 10px;
   }
 
+  nav a{
+    padding: 19px 0px;
+  }
+
+  nav a:hover {
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+  }
+
   h2 {
     font-size: 1.3em;
   }
@@ -23,6 +32,10 @@
   }
 
   /* Section1 */
+  #section {
+    margin-left: 20px;
+  }
+
   /* Filtres */
   .filtre, .list {
     display: flex;
@@ -117,6 +130,7 @@
     column-gap: 10px;
     justify-content: flex-start;
     width: 100%;
+    margin-left: 15px;
   }
 
   #section1 article {
