--- a/css/landscape.css
+++ b/css/landscape.css
@@ -145,29 +145,26 @@
 
   .block {
     display: flex;
-    flex-direction: column;
-    row-gap: 25px;
-    height: 100%;
-    margin-left: 15px;
-  }
-
-  .block div {
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  div > .block1{
-    display: flex;
     flex-direction: row;
-    column-gap: 25px;
-    max-width: 100%;
-    max-height: 100%;
+    flex-wrap: wrap;
+    row-gap: 25px;
   }
 
   .block a {
     max-width: 100%;
+  }
+
+  div .block1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 55px;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .block div {
+    /* max-width: 100%; */
     height: 300px;
   }
 
