--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,6 +6,7 @@
 
   .test_container {
     margin: 0;
+    width: inherit;
   }
 
   /* Header & Nav */
@@ -170,10 +171,9 @@
   .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     row-gap: 20px;
     width: 100%;
+    margin-left: 5px;
   }
 
   #section1 article {
@@ -219,7 +219,7 @@
   }
 
   .block a {
-    width: 100%;
+    width: 93%;
     height: 300px;
   }
 
